sumo/tests/duarouter/flows/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departspeed' in definition of a flow is empty.
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid departspeed definition for vehicle 0.
Quitting (on error).
